[package]
name = "prox_detector_alloy"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.0.0"
alloy-provider = { version = "0.14.0", features = ["engine-api", "reqwest"] }
alloy-rpc-types = { version = "0.14.0", features = ["engine"] }
alloy-sol-types = "1.0.0"
alloy-transport-http = "0.14.0"
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
url = "2.5.0"
